# p2p-chat

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp  client.h  http_server.cpp  http_server.h  main.cpp  peer_info.h  registerer.cpp  registerer.h  utils.cpp  utils.h  ws_server.cpp  ws_server.h
rendezvous-server/: CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp  peer.h  server.cpp  server.h
rendezvous-server/test/: simple_matching.sh
shared/: packet.cpp  packet.h  request.cpp  request.h
test/: client_connect.sh  simple_matching.sh
